Added button with the link to the App

--- a/index.html
+++ b/index.html
@@ -439,6 +439,7 @@
               <div class="col-md-8  text-center">
                 <h2 class="mb-3">Events &amp; News</h2>
                 <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolorum fuga, alias distinctio voluptatum magni voluptatibus.</p>
+                <a href="https://foodie8.appbuild.io/?ni=1"><button class="btn btn-outline-primary">Launch Insta App</button></a>
               </div>
             </div>
             <div class="row">
