--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
 
           </div>
         </div> <!-- .section -->
-
+<!-- 
         <div class="section" data-aos="fade">
           <div class="container">
             <div class="row justify-content-center text-center" data-aos="fade-up">
@@ -251,9 +251,9 @@
               </div>
             </div>
           </div>  
-        </div> <!-- .section -->
+        </div> <!-- .section --> -->
 
-        <div class="site-half-wrap d-block d-lg-flex">
+     <!--    <div class="site-half-wrap d-block d-lg-flex">
           <div class="block-half" data-aos="fade">
             <div class="image-bg-fullwidth" style="background-image: url(img/img_1.jpg);"></div>
             <div class="half d-block d-lg-flex">
@@ -275,7 +275,7 @@
             </div>
             <div class="image-bg-fullwidth" style="background-image: url(img/chef_2.jpg);"></div>
           </div>
-        </div>
+        </div> -->
 
         <div class="section">
           <div class="container">
