--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
           </div>
         </div>
        
-      </header> <!-- site-header --> -->
+      </header> <!- site-header --> 
       
       <div class="main-wrap">
         <div class="cover_1">
