Added Social Media and logo

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         </div>
       </nav> -->
 
-     <!--  <header class="site-header">
+      <header class="site-header">
         <div class="row align-items-center">
           <div class="col-5 col-md-3">
              <ul class="list-unstyled social">
@@ -61,7 +61,7 @@
           </div>
         </div>
        
-      </header> <!- site-header --> 
+      </header> 
       
       <div class="main-wrap">
         <div class="cover_1">
