--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
     <div class="site-wrap">
       
-      <!-- <nav class="site-menu">
+      <nav class="site-menu">
         <div class="site-menu-inner">
           <ul class="list-unstyled">
             <li class="active"><a href="index.html">Home</a></li>
@@ -41,7 +41,7 @@
             <li><a href="contact.html">Contact</a></li>
           </ul>
         </div>
-      </nav> -->
+      </nav>
 
       <header class="site-header">
         <div class="row align-items-center">
