--- a/index.html
+++ b/index.html
@@ -69,7 +69,8 @@
             <div class="container">
               <div class="row align-items-center">
                 <div class="col-md-12" data-aos="fade-up">
-                  <h2 class="heading">Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit ipsa sint amet aliquam velit minima tenetur quisquam beatae molestiae possimus dicta.</h2>
+                  <h2 class="heading">Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit ipsa sint amet aliquam velit minima tenetur quisquam beatae molestiae possimus dicta.</h2><br>
+                  <a href="https://foodie8.appbuild.io/?ni=1"><button class="btn btn-outline-primary">Launch Insta App</button></a>
                 </div>
               </div>
             </div>
@@ -439,7 +440,7 @@
               <div class="col-md-8  text-center">
                 <h2 class="mb-3">Events &amp; News</h2>
                 <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolorum fuga, alias distinctio voluptatum magni voluptatibus.</p>
-                <a href="https://foodie8.appbuild.io/?ni=1"><button class="btn btn-outline-primary">Launch Insta App</button></a>
+                
               </div>
             </div>
             <div class="row">
