--- a/index.html
+++ b/index.html
@@ -27,6 +27,10 @@
   </head>
   <body>
     
+    <!-- If you would like to customize the button, remove or change the "class" attribute inside the <span> tag --> 
+<span class="glf-button" data-glf-cuid="ac91b6ec-4197-4977-98f8-8932797153b8" data-glf-ruid="a556015f-adae-47dc-a831-da81442826e8" > See MENU & Order</span> 
+<span class="glf-button reservation" data-glf-cuid="ac91b6ec-4197-4977-98f8-8932797153b8" data-glf-ruid="a556015f-adae-47dc-a831-da81442826e8" data-glf-reservation="true" > Table Reservation</span>
+<script src="https://www.fbgcdn.com/embedder/js/ewm2.js" defer async ></script>
 
     <div class="site-wrap">
       
